force-app/main/default/objects/I_ST_Current_High_School__c/I_ST_Current_High_School__c.object-meta.xml
<CustomObject>
    <description>Created for account management to store contacts and its accounts</description>
    <label>Current High School</label>
    <nameField>
        <displayFormat>CHS{0000}</displayFormat>
        <label>Current High School Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CurrentHighSchools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>