force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_Account__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Account__c</fullName>
    <label>School Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Current Student</relationshipLabel>
    <relationshipName>CurrentHighSchools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>