force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact__c</fullName>
    <label>Student Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Current High School</relationshipLabel>
    <relationshipName>CurrentHighSchools</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>