force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_Enquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Enquirer_Type__c</fullName>
    <label>Enquirer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Enquirer_Type</valueSetName>
    </valueSet>
</CustomField>