force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_Expected_Year_Of_Completion__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Expected_Year_Of_Completion__c</fullName>
    <label>Expected Year Of Completion</label>
    <length>4</length>
    <type>Text</type>
</CustomField>