force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_VTAC_Applicant_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>I_ST_VTAC_Applicant_Category_Description__c</fullName>
    <description>VTAC Application Category Description as per IST-302</description>
    <label>VTAC Application Category Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_VTAC_Application_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_VTAC_Category_Description</valueSetName>
    </valueSet>
</CustomField>