force-app/main/default/objects/I_ST_Current_High_School__c/fields/I_ST_VTAC_ID__c.field-meta.xml
<CustomField>
    <fullName>I_ST_VTAC_ID__c</fullName>
    <label>VTAC ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>