force-app/main/default/objects/I_ST_Current_High_School__c/listViews/Current_High_School_Student.listView-meta.xml
<ListView>
    <fullName>Current_High_School_Student</fullName>
    <columns>NAME</columns>
    <columns>I_ST_Contact__c</columns>
    <columns>I_ST_Enquirer_Type__c</columns>
    <columns>I_ST_Expected_Year_Of_Completion__c</columns>
    <columns>I_ST_Account__c</columns>
    <columns>I_ST_VTAC_Application_Category__c</columns>
    <columns>I_ST_VTAC_Applicant_Category_Description__c</columns>
    <columns>I_ST_VTAC_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_ST_Account__c</field>
        <operation>equals</operation>
        <value>ALBERT PARK COllege</value>
    </filters>
    <label>Current High School Student</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Media_Marketing</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>